[fix][ui] about dialog Icon cutoff in safari fix #12144 env 10.78.96.167 Signed-off-by: Yogi_Wang <yawang@vmware.com>

--- a/src/portal/src/app/shared/about-dialog/about-dialog.component.scss
+++ b/src/portal/src/app/shared/about-dialog/about-dialog.component.scss
@@ -12,10 +12,15 @@
 .content {
     margin:0 10px 10px 10px;
     outline: none;
+    width: 470px;
 }
 
 .harbor-icon {
-    transform: translateX(-100%);
     width: 56px;
     filter: drop-shadow(rgb(0, 0, 0) 58px 2px);
+}
+
+.harbor-logo-black {
+    width: 60px;
+    overflow: hidden;
 }
